# jankeytype

./: .editorconfig  .gitattributes  .gitignore  200.txt  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  main.cpp  power_series.txt  text.txt  vcpkg.json
